--- a/index.html
+++ b/index.html
@@ -100,18 +100,19 @@
           position: relative;
         }
 
-        /* Watermark styling */
+        /* Watermark styling - WOW EFFECT */
         .watermark {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            opacity: 0.05 !important;
-            font-size: 300px;
+            opacity: 0.12 !important; /* Increased opacity for better visibility */
+            font-size: 350px; /* HUGE */
             pointer-events: none;
             z-index: 0;
             display: block !important;
             color: black;
+            line-height: 1;
         }
 
         /* Reset Tailwind constraints */
@@ -126,12 +127,12 @@
   <script type="importmap">
 {
   "imports": {
-    "vite": "https://aistudiocdn.com/vite@^7.2.6",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.6",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
