--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
       }
     </script>
     <style>
+      html {
+        overscroll-behavior: none; /* Critical: stops pull-to-refresh on root */
+      }
       body {
         background-color: #0F172A;
+        overscroll-behavior: none; /* Double check for body */
         overscroll-behavior-y: none;
+        touch-action: pan-x pan-y;
       }
       .clue-scroll::-webkit-scrollbar { width: 6px; }
       .clue-scroll::-webkit-scrollbar-track { background: rgba(0,0,0,0.05); }
@@ -72,6 +77,7 @@
           print-color-adjust: exact !important;
           width: 297mm;
           height: 210mm;
+          overflow: hidden;
         }
 
         /* Hide UI */
