--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="it">
   <head>
@@ -81,6 +80,13 @@
           overflow: visible !important;
         }
 
+        /* --- FIX: NASCONDE STRUMENTI DI EDITING (CESTINO, BORDI, MANIGLIE) --- */
+        .resizer, .delete-btn, .selection-border, .handle, .action-buttons, [class*="resizable-handle"] {
+          display: none !important;
+          visibility: hidden !important;
+          opacity: 0 !important;
+        }
+
         /* Hide UI */
         header, footer, button, .no-print, form, .print-guide, .watermark-controls, .print-hidden, #root > div > header, #root > div > div.flex { display: none !important; }
         
@@ -90,7 +96,7 @@
           height: 210mm; 
           display: flex !important;
           flex-direction: row !important;
-          flex-wrap: nowrap !important; /* CRITICO: Impedisce che vadano a capo */
+          flex-wrap: nowrap !important; 
           page-break-after: always;
           break-after: page;
           page-break-inside: avoid;
@@ -100,15 +106,15 @@
           margin: 0 !important;
           left: 0;
           top: 0;
-          overflow: hidden !important; /* CRITICO: Taglia tutto ciò che sborda per non creare pagine fantasma */
+          overflow: hidden !important; 
         }
 
         /* The Half Page (A5) */
         .print-half {
-          width: 50% !important; /* Esattamente metà A4 */
-          flex: 0 0 50% !important; /* Non ridimensionabile */
+          width: 50% !important; 
+          flex: 0 0 50% !important; 
           height: 100% !important;
-          padding: 10mm; /* Margine di sicurezza interno */
+          padding: 10mm; 
           box-sizing: border-box;
           display: flex;
           flex-direction: column;
@@ -121,9 +127,8 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            /* Transform viene gestito inline dal componente React */
             opacity: 0.1 !important;
-            font-size: 300px; /* Ridotto leggermente per sicurezza */
+            font-size: 300px; 
             pointer-events: none;
             z-index: 0;
             display: block !important;
