--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
           background: white !important;
           -webkit-print-color-adjust: exact !important; 
           print-color-adjust: exact !important;
-          overflow: hidden !important; /* CORREZIONE: Impedisce al browser di creare pagine extra */
+          overflow: hidden !important;
         }
 
-        /* CORREZIONE CHIRURGICA: Nasconde tutti i controlli visibili (cestino, bordi blu, maniglie) */
-        .resizer, .delete-btn, .selection-border, .handle, .action-buttons, [class*="resizable-handle"], .react-resizable-handle { 
-          display: none !important; 
-          visibility: hidden !important; 
+        /* INSERIMENTO CHIRURGICO: Nasconde controlli di editing e maniglie in stampa */
+        .resizer, .delete-btn, .selection-border, .handle, .action-buttons, [class*="resizable-handle"], .react-resizable-handle {
+          display: none !important;
+          visibility: hidden !important;
           opacity: 0 !important;
         }
 
@@ -96,7 +96,7 @@
           height: 210mm; 
           display: flex !important;
           flex-direction: row !important;
-          flex-wrap: nowrap !important; /* CRITICO: Impedisce che vadano a capo */
+          flex-wrap: nowrap !important; 
           page-break-after: always;
           break-after: page;
           page-break-inside: avoid;
@@ -106,21 +106,21 @@
           margin: 0 !important;
           left: 0;
           top: 0;
-          overflow: hidden !important; /* CORREZIONE: Taglia tutto ciò che sborda per non creare pagine fantasma */
+          overflow: hidden !important; /* INSERIMENTO CHIRURGICO: Taglia stickers galleggianti */
         }
 
         /* The Half Page (A5) */
         .print-half {
-          width: 50% !important; /* Esattamente metà A4 */
-          flex: 0 0 50% !important; /* Non ridimensionabile */
+          width: 50% !important; 
+          flex: 0 0 50% !important; 
           height: 100% !important;
-          padding: 10mm; /* Margine di sicurezza interno */
+          padding: 10mm; 
           box-sizing: border-box;
           display: flex;
           flex-direction: column;
           position: relative;
           border-color: #e5e7eb !important;
-          overflow: hidden !important; /* CORREZIONE: Impedisce agli stickers di galleggiare fuori */
+          overflow: hidden !important; /* INSERIMENTO CHIRURGICO: Impedisce sbordamento elementi */
         }
 
         /* Watermark styling */
@@ -128,9 +128,8 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            /* Transform viene gestito inline dal componente React */
             opacity: 0.1 !important;
-            font-size: 300px; /* Ridotto leggermente per sicurezza */
+            font-size: 300px; 
             pointer-events: none;
             z-index: 0;
             display: block !important;
